DOM Display and victory conditions okay - basic styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
 
+    <h1 class="tictactoe">Tic Tac Toe</h1>
+
+    <div class="grid" id="gameBoard">
+    <h1 class="status"></div>
+    <button id="resetButton">Reset</button>
+
 
 </body>
 <script src="javascript.js"></script>
