Tic tac toe functionnal - victory, draw and reset working - Player's name to chose not added / Score not added

--- a/index.html
+++ b/index.html
@@ -11,13 +11,27 @@
 
 <body>
 
-    <h1 class="tictactoe">Tic Tac Toe</h1>
+    <h1 class="tictactoe">TIC TAC TOE</h1>
 
-    <div class="grid" id="gameBoard">
-    <h1 class="status"></div>
-    <button id="resetButton">Reset</button>
+    <div class="container">
 
+        <div class ="player1">
+            <div class ="score1">Score :</div>
+        </div>
 
+        <div class="grid" id="gameBoard"></div>
+        <div class = "player2">
+            <div class ="score2">Score :</div>
+        </div>
+
+    </div>
+
+    <div class="status"></div>
+    <button id="resetButton">RESET</button>
+
+    <div class = "copyright">
+    <div id ="copyright">Copyright © thefx3 - The Odin Project 2025 </div>
+    </div>
 </body>
 <script src="javascript.js"></script>
 
