Add score and styling - all done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="check.svg" alt="Confirm icon" width="30" height="30" class="confirm-icon-p1 hidden">
                 <img src="close.svg" alt="Cancel icon" width="30" height="30" class="cancel-icon-p1 hidden">
             </div>
-            <div class ="score">Score :</div>
+            <div class ="score" id="score1">0</div>
         </div>
 
         <div class="grid" id="gameBoard"></div>
@@ -34,7 +34,7 @@
                 <img src="check.svg" alt="Confirm icon" width="30" height="30" class="confirm-icon-p2 hidden">
                 <img src="close.svg" alt="Cancel icon" width="30" height="30" class="cancel-icon-p2 hidden">
             </div>
-            <div class ="score">Score :</div>
+            <div class ="score" id="score2">0</div>
         </div>
 
         <div class="small-container">
